--- a/KlipperConfig/printer.cfg
+++ b/KlipperConfig/printer.cfg
@@ -14,32 +14,32 @@
 # https://book.cryd.de/uploads/images/gallery/2022-12/scaled-1680-/rnViL5MhAQDAS1Ej-azOimage.png
 ########################################################################################################################
 #Pinnummer      	    Bezeichnung (Klipper)           Pinnummer (Marlin)
-# #1	                PG5 ( OC0B )	                Digital pin 4 (PWM)
-# #2	                PE0 ( RXD0/PCINT8 )	            Digital pin 0 (RX0)
-# #3	                PE1 ( TXD0 )	                Digital pin 1 (TX0)
+# #1	                PG5 ( OC0B )	                D4 (PWM)
+# #2	                PE0 ( RXD0/PCINT8 )	            D0 (RX0)
+# #3	                PE1 ( TXD0 )	                D1 (TX0)
 # #4	                PE2 ( XCK0/AIN0 )	
-# #5	                PE3 ( OC3A/AIN1 )	            Digital pin 5 (PWM)
-# #6	                PE4 ( OC3B/INT4 )	            Digital pin 2 (PWM)
-# #7	                PE5 ( OC3C/INT5 )	            Digital pin 3 (PWM)
+# #5	                PE3 ( OC3A/AIN1 )	            D5 (PWM)
+# #6	                PE4 ( OC3B/INT4 )	            D2 (PWM)
+# #7	                PE5 ( OC3C/INT5 )	            D3 (PWM)
 # #8	                PE6 ( T3/INT6 )	
 # #9	                PE7 ( CLKO/ICP3/INT7 )	
 # #10	                VCC	                            VCC
 # #11	                GND	                            GND
-# #12	                PH0 ( RXD2 )	                Digital pin 17 (RX2)
-# #13	                PH1 ( TXD2 )	                Digital pin 16 (TX2)
+# #12	                PH0 ( RXD2 )	                D17 (RX2)
+# #13	                PH1 ( TXD2 )	                D16 (TX2)
 # #14	                PH2 ( XCK2 )	                
-# #15	                PH3 ( OC4A )	                Digital pin 6 (PWM)
-# #16	                PH4 ( OC4B )	                Digital pin 7 (PWM)
-# #17	                PH5 ( OC4C )	                Digital pin 8 (PWM)
-# #18	                PH6 ( OC2B )	                Digital pin 9 (PWM)
-# #19	                PB0 ( SS/PCINT0 )	            Digital pin 53 (SS)
-# #20	                PB1 ( SCK/PCINT1 )	            Digital pin 52 (SCK)
-# #21	                PB2 ( MOSI/PCINT2 )	            Digital pin 51 (MOSI)
-# #22	                PB3 ( MISO/PCINT3 )	            Digital pin 50 (MISO)
-# #23	                PB4 ( OC2A/PCINT4 )	            Digital pin 10 (PWM)
-# #24	                PB5 ( OC1A/PCINT5 )	            Digital pin 11 (PWM)
-# #25	                PB6 ( OC1B/PCINT6 )	            Digital pin 12 (PWM)
-# #26	                PB7 ( OC0A/OC1C/PCINT7 )	    Digital pin 13 (PWM)
+# #15	                PH3 ( OC4A )	                D6 (PWM)
+# #16	                PH4 ( OC4B )	                D7 (PWM)
+# #17	                PH5 ( OC4C )	                D8 (PWM)
+# #18	                PH6 ( OC2B )	                D9 (PWM)
+# #19	                PB0 ( SS/PCINT0 )	            D53 (SS)
+# #20	                PB1 ( SCK/PCINT1 )	            D52 (SCK)
+# #21	                PB2 ( MOSI/PCINT2 )	            D51 (MOSI)
+# #22	                PB3 ( MISO/PCINT3 )	            D50 (MISO)
+# #23	                PB4 ( OC2A/PCINT4 )	            D10 (PWM)
+# #24	                PB5 ( OC1A/PCINT5 )	            D11 (PWM)
+# #25	                PB6 ( OC1B/PCINT6 )	            D12 (PWM)
+# #26	                PB7 ( OC0A/OC1C/PCINT7 )	    D13 (PWM)
 # #27	                PH7 ( T4 )	
 # #28	                PG3 ( TOSC2 )	
 # #29	                PG4 ( TOSC1 )	
@@ -48,50 +48,50 @@
 # #32	                GND	                            GND
 # #33	                XTAL2	                        XTAL2
 # #34	                XTAL1	                        XTAL1
-# #35	                PL0 ( ICP4 )	                Digital pin 49
-# #36	                PL1 ( ICP5 )	                Digital pin 48
-# #37	                PL2 ( T5 )	                    Digital pin 47
-# #38	                PL3 ( OC5A )	                Digital pin 46 (PWM)
-# #39	                PL4 ( OC5B )	                Digital pin 45 (PWM)
-# #40	                PL5 ( OC5C )	                Digital pin 44 (PWM)
-# #41	                PL6	                            Digital pin 43
-# #42	                PL7	                            Digital pin 42
-# #43	                PD0 ( SCL/INT0 )	            Digital pin 21 (SCL)
-# #44	                PD1 ( SDA/INT1 )	            Digital pin 20 (SDA)
-# #45	                PD2 ( RXDI/INT2 )	            Digital pin 19 (RX1)
-# #46	                PD3 ( TXD1/INT3 )	            Digital pin 18 (TX1)
+# #35	                PL0 ( ICP4 )	                D49
+# #36	                PL1 ( ICP5 )	                D48
+# #37	                PL2 ( T5 )	                    D47
+# #38	                PL3 ( OC5A )	                D46 (PWM)
+# #39	                PL4 ( OC5B )	                D45 (PWM)
+# #40	                PL5 ( OC5C )	                D44 (PWM)
+# #41	                PL6	                            D43
+# #42	                PL7	                            D42
+# #43	                PD0 ( SCL/INT0 )	            D21 (SCL)
+# #44	                PD1 ( SDA/INT1 )	            D20 (SDA)
+# #45	                PD2 ( RXDI/INT2 )	            D19 (RX1)
+# #46	                PD3 ( TXD1/INT3 )	            D18 (TX1)
 # #47	                PD4 ( ICP1 )	
 # #48	                PD5 ( XCK1 )	
 # #49	                PD6 ( T1 )	
-# #50	                PD7 ( T0 )	                    Digital pin 38
-# #51	                PG0 ( WR )	                    Digital pin 41
-# #52	                PG1 ( RD )	                    Digital pin 40
-# #53	                PC0 ( A8 )	                    Digital pin 37
-# #54	                PC1 ( A9 )	                    Digital pin 36
-# #55	                PC2 ( A10 )	                    Digital pin 35
-# #56	                PC3 ( A11 )	                    Digital pin 34
-# #57	                PC4 ( A12 )	                    Digital pin 33
-# #58	                PC5 ( A13 )	                    Digital pin 32
-# #59	                PC6 ( A14 )	                    Digital pin 31
-# #60	                PC7 ( A15 )	                    Digital pin 30
+# #50	                PD7 ( T0 )	                    D38
+# #51	                PG0 ( WR )	                    D41
+# #52	                PG1 ( RD )	                    D40
+# #53	                PC0 ( A8 )	                    D37
+# #54	                PC1 ( A9 )	                    D36
+# #55	                PC2 ( A10 )	                    D35
+# #56	                PC3 ( A11 )	                    D34
+# #57	                PC4 ( A12 )	                    D33
+# #58	                PC5 ( A13 )	                    D32
+# #59	                PC6 ( A14 )	                    D31
+# #60	                PC7 ( A15 )	                    D30
 # #61	                VCC	                            VCC
 # #62	                GND	                            GND
-# #63	                PJ0 ( RXD3/PCINT9 )	            Digital pin 15 (RX3)
-# #64	                PJ1 ( TXD3/PCINT10 )	        Digital pin 14 (TX3)
+# #63	                PJ0 ( RXD3/PCINT9 )	            D15 (RX3)
+# #64	                PJ1 ( TXD3/PCINT10 )	        D14 (TX3)
 # #65	                PJ2 ( XCK3/PCINT11 )	
 # #66	                PJ3 ( PCINT12 )	
 # #67	                PJ4 ( PCINT13 )	
 # #68	                PJ5 ( PCINT14 )	
 # #69	                PJ6 ( PCINT 15 )	
-# #70	                PG2 ( ALE )	                    Digital pin 39
-# #71	                PA7 ( AD7 )	                    Digital pin 29
-# #72	                PA6 ( AD6 )	                    Digital pin 28
-# #73	                PA5 ( AD5 )	                    Digital pin 27
-# #74	                PA4 ( AD4 )	                    Digital pin 26
-# #75	                PA3 ( AD3 )	                    Digital pin 25
-# #76	                PA2 ( AD2 )	                    Digital pin 24
-# #77	                PA1 ( AD1 )	                    Digital pin 23
-# #78	                PA0 ( AD0 )	                    Digital pin 22
+# #70	                PG2 ( ALE )	                    D39
+# #71	                PA7 ( AD7 )	                    D29
+# #72	                PA6 ( AD6 )	                    D28
+# #73	                PA5 ( AD5 )	                    D27
+# #74	                PA4 ( AD4 )	                    D26
+# #75	                PA3 ( AD3 )	                    D25
+# #76	                PA2 ( AD2 )	                    D24
+# #77	                PA1 ( AD1 )	                    D23
+# #78	                PA0 ( AD0 )	                    D22
 # #79	                PJ7	
 # #80	                VCC	                            VCC
 # #81	                GND	                            GND
@@ -272,15 +272,15 @@ path: ~/printer_data/gcodes
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 13.970
-#*# pid_ki = 0.454
-#*# pid_kd = 107.396
+#*# pid_kp = 15.022
+#*# pid_ki = 0.563
+#*# pid_kd = 100.273
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 70.936
-#*# pid_ki = 1.446
-#*# pid_kd = 869.850
+#*# pid_kp = 68.795
+#*# pid_ki = 1.571
+#*# pid_kd = 753.308
 #*#
 #*# [bltouch]
 #*# z_offset = 1.679
@@ -288,11 +288,11 @@ path: ~/printer_data/gcodes
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.369750, 0.349750, 0.324750, 0.326000, 0.528500
-#*# 	  0.506000, 0.457250, 0.536000, 0.569750, 0.611000
-#*# 	  0.518500, 0.617250, 0.552250, 0.623500, 0.633500
-#*# 	  0.507250, 0.483500, 0.551000, 0.521000, 0.627250
-#*# 	  0.394750, 0.446000, 0.534750, 0.491000, 0.406000
+#*# 	0.369750, 0.349750, 0.324750, 0.326000, 0.528500
+#*# 	0.506000, 0.457250, 0.536000, 0.569750, 0.611000
+#*# 	0.518500, 0.617250, 0.552250, 0.623500, 0.633500
+#*# 	0.507250, 0.483500, 0.551000, 0.521000, 0.627250
+#*# 	0.394750, 0.446000, 0.534750, 0.491000, 0.406000
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
